# pq_communication

./: .gitignore  CMakeLists.txt  README.md
.github/: liboqs.sh
.github/workflows/: ci.yml
src/: CMakeLists.txt  aes256gcm.c  aes256gcm.h  commitment.c  commitment.h  fsxy-ake.c  fsxy-ake.h  gake.c  gake.h  indcca.c  indcca.h  utils.c  utils.h
test/: CMakeLists.txt  client.c  client.h  server.c  server.h  test-fsxy-ake.c  test_aes256gcm.c  test_commitment.c  test_gake.c  test_indcca.c  test_speed_ake.c  test_speed_commitment.c  test_speed_gake.c  test_speed_kem.c
