add_compile_options(-Wall -Wextra -Wpedantic)
add_compile_options(-Werror)
add_compile_options(-Wmissing-prototypes -Wredundant-decls -Wshadow -Wpointer-arith)
add_compile_options(-O3 -fwrapv)

add_executable(test_aes256gcm ../src/utils.c test_aes256gcm.c)
target_link_libraries(test_aes256gcm PUBLIC aes256gcm)

set(TEST_FSXY_AKE_SRCS ../src/fsxy-ake.c test-fsxy-ake.c)
add_executable(test_fsxy_ake ${TEST_FSXY_AKE_SRCS})
target_link_libraries(test_fsxy_ake PUBLIC utils fsxy-ake)

set(TEST_SPEED_FSXY_AKE system_info.c test_speed_ake.c)
add_executable(test_speed_ake ${TEST_SPEED_FSXY_AKE})
target_link_libraries(test_speed_ake PUBLIC utils fsxy-ake)
target_link_libraries(test_speed_ake PRIVATE m)

set(TEST_INDCCA ../src/indcca.c test_indcca.c)
add_executable(test_indcca ${TEST_INDCCA})
target_link_libraries(test_indcca PUBLIC oqs utils indcca aes256gcm)

set(TEST_COMMITMENT ../src/commitment.c test_commitment.c)
add_executable(test_commitment ${TEST_COMMITMENT})
target_link_libraries(test_commitment PUBLIC oqs utils commitment)

set(TEST_SPEED_COMMITMENT ../src/commitment.c system_info.c test_speed_commitment.c)
add_executable(test_speed_commitment ${TEST_SPEED_COMMITMENT})
target_link_libraries(test_speed_commitment PUBLIC oqs utils commitment)
target_link_libraries(test_speed_commitment PRIVATE m)

set(TEST_GAKE ../src/gake.c ../src/commitment.c test_gake.c)
add_executable(test_gake ${TEST_GAKE})
target_link_libraries(test_gake PUBLIC gake commitment)

set(TEST_SPEED_GAKE ../src/gake.c ../src/commitment.c system_info.c test_speed_gake.c)
add_executable(test_speed_gake ${TEST_SPEED_GAKE})
target_link_libraries(test_speed_gake PUBLIC gake commitment)
target_link_libraries(test_speed_gake PRIVATE m)

set(TEST_SPEED_KEM system_info.c test_speed_kem.c)
add_executable(test_speed_kem ${TEST_SPEED_KEM})
target_link_libraries(test_speed_kem PUBLIC oqs ${OPENSSL_CRYPTO_LIBRARY})
target_link_libraries(test_speed_kem PRIVATE m)

set(SERVER server.c ../src/gake.c ../src/commitment.c)
add_executable(server ${SERVER})
target_link_libraries(server PUBLIC gake commitment ${OPENSSL_CRYPTO_LIBRARY})
target_link_libraries(server PRIVATE m)
target_link_options(server PRIVATE "LINKER:-L/usr/lib,-lssl,-lcrypto")

set(CLIENT client.c ../src/gake.c ../src/commitment.c)
add_executable(client ${CLIENT})
target_link_libraries(client PUBLIC gake commitment ${OPENSSL_CRYPTO_LIBRARY})
target_link_libraries(client PRIVATE m)
target_link_options(client PRIVATE "LINKER:-L/usr/lib,-lssl,-lcrypto")

add_test(NAME aes256gcm COMMAND test_aes256gcm)
add_test(NAME test_fsxy_ake COMMAND test_fsxy_ake)
add_test(NAME test_indcca COMMAND test_indcca)
add_test(NAME test_commitment COMMAND test_commitment)
add_test(NAME test_server COMMAND server)
add_test(NAME test_gake_Kyber512 COMMAND test_gake 100 Kyber512)
add_test(NAME test_gake_Kyber768 COMMAND test_gake 100 Kyber768)
add_test(NAME test_gake_Kyber1024 COMMAND test_gake 100 Kyber1024)
add_test(NAME test_gake_LightSaber-KEM COMMAND test_gake 100 LightSaber-KEM)
add_test(NAME test_gake_Saber-KEM COMMAND test_gake 100 Saber-KEM)
add_test(NAME test_gake_FireSaber-KEM COMMAND test_gake 100 FireSaber-KEM)
add_test(NAME test_gake_NTRU-HPS-2048-509 COMMAND test_gake 100 NTRU-HPS-2048-509)
add_test(NAME test_gake_NTRU-HPS-2048-677 COMMAND test_gake 100 NTRU-HPS-2048-677)
add_test(NAME test_gake_NTRU-HPS-4096-821 COMMAND test_gake 100 NTRU-HPS-4096-821)
add_test(NAME test_gake_Classic-McEliece-348864 COMMAND test_gake 20 Classic-McEliece-348864)
add_test(NAME test_gake_Classic-McEliece-348864f COMMAND test_gake 20 Classic-McEliece-348864f)
add_test(NAME test_gake_Classic-McEliece-460896 COMMAND test_gake 20 Classic-McEliece-460896)
add_test(NAME test_gake_Classic-McEliece-460896f COMMAND test_gake 20 Classic-McEliece-460896f)
add_test(NAME test_gake_Classic-McEliece-6688128 COMMAND test_gake 20 Classic-McEliece-6688128)
add_test(NAME test_gake_Classic-McEliece-6688128f COMMAND test_gake 20 Classic-McEliece-6688128f)
add_test(NAME test_gake_Classic-McEliece-6960119 COMMAND test_gake 20 Classic-McEliece-6960119)
add_test(NAME test_gake_Classic-McEliece-6960119f COMMAND test_gake 20 Classic-McEliece-6960119f)
add_test(NAME test_gake_Classic-McEliece-8192128 COMMAND test_gake 20 Classic-McEliece-8192128)
add_test(NAME test_gake_Classic-McEliece-8192128f COMMAND test_gake 20 Classic-McEliece-8192128f)
